kubernetes/apps/links/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: links
spec:
  selector:
    app: links
  ports:
    - port: 80
      targetPort: 80
