kubernetes/apps/links/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: links
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - links.gabriel0day.cloud
      secretName: links-tls
  rules:
    - host: links.gabriel0day.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: links
                port:
                  number: 80
